--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tarojs/cli": "3.4.10",
     "@tarojs/components": "3.4.10",
     "@tarojs/plugin-framework-react": "3.4.10",
+    "@tarojs/plugin-html": "^3.5.7",
     "@tarojs/react": "3.4.10",
     "@tarojs/runtime": "3.4.10",
     "@tarojs/taro": "3.4.10",
